# mcpserver

./: README.md  pyproject.toml
src/mcp_deployment.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/mcp_server/: __main__.py  deployment.py
